Fix text overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,10 @@ a:hover {
   color: #aaa;
 }
 
+#main-post > p {
+  overflow: scroll;
+}
+
 #main-post > blockquote {
   margin: 10px 0;
   padding: 10px 20px;
